# SDL-Wrapper

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp
graphics/: circle.cpp  circle.h  colour.h  graphics-application.cpp  graphics-application.h  graphics.cpp  graphics.h  shape.cpp  shape.h  vec2.cpp  vec2.h
